--- a/jsnack4/index.html
+++ b/jsnack4/index.html
@@ -10,6 +10,14 @@
 <body>
   
   <h1>Elenco nomi studenti:</h1>
+  <div id="names-list"></div>
+
+  <h1>Elenco nomi studenti con un totale di voti superiore a 70:</h1>
+  <div id="names-list70"></div>
+
+  <h1>Elenco nomi studenti con un totale di voti superiore a 70 e id superiore a 120:
+  </h1>
+  <div id="names-list120"></div>
 
   <script src="script.js"></script>
 </body>
